Update vendor/libarchive to git 024be27d1b299c030e8841bed3002ee07ba9eedc

Important vendor bugfixes (relevant to FreeBSD):
#747: Out of bounds read in mtree parser
#761: heap-based buffer overflow in read_Header (7-zip)
#784: Invalid file on bsdtar command line results in internal errors (1)

PR:		213092 (1)
Obtained from:	https://github.com/libarchive/libarchive